# km2testcase

./: .gitignore  .pre-commit-config.yaml  EXAMPLE.km  README.md  RELEASE.md  pyproject.toml
km2testcase/: __init__.py  cli.py  model.py  parser.py  writter.py  writter_mixin.py
tests/: case.py  case1-1.km  case2.km  test_convert.py
