[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project]
name = "km2testcase"
description = "km to testcase! "
keywords = ["km2testcase", "testcase", "zentao"]
requires-python = ">=3.7"
dependencies = [
    "click",
    "pydantic"
]
dynamic = ["version", ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
test = [
    "pytest",
]


[[project.authors]]
name = "Wh1isper"
email = "9573586@qq.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Source = "https://github.com/wh1isper/km2testcase"

[project.scripts]
km2testcase = "km2testcase.cli:cli"

[tool.check-manifest]
ignore = [".*", ]

[tool.hatch.version]
path = "km2testcase/__init__.py"
